# BRender

./: .clang-format  .clang-format-ignore  .git-blame-ignore-revs  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  Config.cmake.in  LICENSE  MIGRATION.md  README.md  default.nix  flake.nix  samples.nix
brender/: CMakeLists.txt  resgen.pl
brender-crocde-1.2.0/host/: CMakeLists.txt  himage.c  hstsetup.c
brender-crocde-1.3.0/glrend/: CMakeLists.txt  device.cpp  device.hpp  devpixmp.cpp  devpixmp.hpp  driver.cpp  drv.hpp  drv_ip.hpp  gl_core_3_2.h  glcache.cpp  glstate.cpp  glstate.hpp  glstate_global.cpp  glstate_hidden.cpp  glstate_ip.hpp  glstate_matrix.cpp  glstate_output.cpp  glstate_primitive.cpp  glstate_surface.cpp  gprim.cpp  gv1buckt.hpp  gv1model.cpp  gv1stored.cpp  lighting.cpp  object.hpp  onscreen.cpp  outfcty.cpp  renderer.cpp  sbuffer.cpp  video.cpp  video.h  video_fonts.cpp  video_ip.hpp
brender-crocde-1.4.0-dev/math/: CMakeLists.txt  brmath.h  fixed.c  scalar.c
brender-crocde-1.4.0-dev/nulldev/: CMakeLists.txt  glighting.c  glighting.h  template.h
brender/ddraw/: CMakeLists.txt  devclut.c  devclut.h  device.c  device.h  devpixmp.c  devpixmp.h  devpmddo.c  driver.c  drv.h  drv_ip.h  dx_error.c  object.c  object.h  ocfree.c  outfcty.c  outfcty.h
brender/fmt/: CMakeLists.txt  fmt.h  fmt_p.h  load3ds.c  load3ds.h  loadasc.c  loadbmp.c  loadgif.c  loadiff.c  loadnff.c  loadscr.c  loadtga.c  loadvue.c  savescr.c
brender/fw/: CMakeLists.txt  assocarr.c  blockops.h  brassert.h  brbsearch.c  brddi.h  brddi_p.h  brexcept.h  brimage.h  brlists.c  brqsort.c  brstdlib.h  bswap.c  dataf_p.h  datafile.c  datafile.h  defdiag.c  deffile.c  defmem.c  dev_objs.hpp  devlist.c  devquery.c  devsetup.c  diag.c  error.c  file.c  formats.h  fw.h  fw_ip.h  fwimg.fns  fwsetup.c  genfile.c  image.c  lexer.c  lexer.h  loader.c  mem.c  object.c  objectc.c  pattern.c  (+12 more)
brender/glrend/: CMakeLists.txt  brender.frag.glsl  brender.vert.glsl  checkboard64.c  device.c  device.h  devpixmp.c  devpixmp.h  devpmglf.c  driver.c  drv.h  drv_ip.h  ext_procs.c  ext_procs_sdl.c  font.c  font.h  glcache.c  glstate.c  glstate.h  glstate_cull.c  glstate_hidden.c  glstate_ip.h  glstate_light.c  glstate_matrix.c  glstate_output.c  glstate_primitive.c  glstate_surface.c  gstored.c  gstored.h  gv1buckt.c  gv1model.c  gv1model.h  onscreen.c  outfcty.c  outfcty.h  renderer.c  renderer.h  rendfcty.c  rendfcty.h  sbuffer.c  (+11 more)
brender/host/: CMakeLists.txt  himage.c  host_ip.h  hostcfg.c  hostimg.h  hstsetup.c
brender/inc/: CMakeLists.txt  actor.h  angles.h  assoca_p.h  assocarr.h  brdiag.h  brender.h  brerror.h  brfile.h  brlimits.h  brlog.h  brmem.h  brv1db.h  brvector.h  colour.h  compend.h  compiler.h  dmyifix.h  fixed.h  fw_p.h  light.h  material.h  math_p.h  matrix.h  model.h  order.h  pixelmap.h  pm_p.h  pool.h  pretok.tok  render.h  scalar.h  syscn_p.h  token.h  tokgen.pl  transfrm.h  v1db_p.h  vecfns.h  vector.h
brender/math/: angles.c  brmath.h  fixed.c  math_ip.h  matrix23.c  matrix34.c  matrix4.c  plane.c  quat.c  scalar.c  transfrm.c  vecifns.h  vector.c
brender/nulldev/: device.c  drv.h  drv_ip.h  glighting.c  glighting.h  gprim.c  gprim.h
brender/pentprim/: CMakeLists.txt  awtmi.h  decal.asm  device.h  infogen.pl  l_piz.c  p_pi.c  p_piz.c  plib.h  pstate.c  sbuffer.h  xzuvc.inc
brender/pixelmap/: CMakeLists.txt  cmemloops.c  fnt3x5.c  fntp7x9.c  genclip.c  gencopy.c  memloops.h  mipsupt.c  pixelmap.c  pm_ip.h  pmdsptch.c  pmfail.c  pmfile.c  pmgen.c  pmmem.c  pmmem.h  pmnull.c  pmsetup.c  pmutil.c  quantize.c  scale.c
brender/sdl2dev/: CMakeLists.txt  devclut.c  device.c  devpixmp.c  devpixmp.h  drv.h  drv_ip.h  outfcty.c  surface.c  util.c
brender/softrend/: CMakeLists.txt  driver.c  drv_ip.h  faceops.c  gen_386.asm  gen_386.h  gv1buckt.c  gv1model.c  lighting.c  mapping.c  object.c  rend.h  renderer.c  rndstate.c  setup.c  state.c  subdiv.asm  v1model.c
brender/std/: CMakeLists.txt  math.c  stddiag.c  stdfile.c  stdlib.c  stdlog.c  stdmem.c
brender/v1db/: CMakeLists.txt  actsupt.c  custsupt.c  dbquery.c  dbsetup.c  def_mat.c  def_mdl.c  def_otab.c  enables.c  ffhooks.c  matsupt.c  modrend.c  modsupt.c  otable.c  pick.c  prelight.c  prepmap.c  prepmatl.c  prepmesh.c  regsupt.c  render.c  v1db.h  v1db_ip.h  v1dbfile.c  zsmacro.h
core/: CMakeLists.txt
core/dosio/: CMakeLists.txt  clock.asm  divtrap.c  divtraph.asm  dos_x.afn  dossetup.c  eventq.c  eventq.inc  hook.c  hook.h  hook_p.h  kbdint.asm  kbdint.hex  keyboard.c  makefile  mouint.asm  mouint.hex  readmse.c  rmeventq.asm  rmeventq.inc  scancode.inc
core/dreamcast/: CMakeLists.txt  dcdiag.c  dcfile.c  dclib.c  dclog.c  dcmem.c  logwrite.c  math.c
core/fmt/: CMakeLists.txt  animgltf.c  brstb.c  brstb.h  cbase64.c  cbase64.h  cgltf.c  cgltf.h  cgltf_brender.h  cgltf_brender_impl.h  cgltf_write.h  cgltf_write_brender.h  ci_dummy.c  dr_pcx.h  load3ds.c  loadasc.c  loadbmp.c  loadgif.c  loadgltf.c  loadiff.c  loadnff.c  loadpcx.c  loadscr.c  loadstb.c  loadtga.c  loadvue.c  savegltf.c  savescr.c  savestb.c  stb_image.h  stb_image_write.h
core/fw/: CMakeLists.txt  assocarr.c  blockops.h  brbegin.c  brbhook.c  brbsearch.c  brddi_p.h  brhash.c  brhashmap.c  brhton.h  brlists.c  brqsort.c  bswap.c  classgen.pl  dataf_p.h  datafile.c  datafile.h  defdiag.c  deffile.c  defmem.c  dev_objs.hpp  devlist.c  devquery.c  devsetup.c  diag.c  error.c  file.c  fw.h  fw_ip.h  fwsetup.c  genfile.c  image.c  lexer.c  log.c  mem.c  object.c  objectc.c  pattern.c  pool.c  printf.c  (+10 more)
core/host/: CMakeLists.txt  cpuinfo.c  himage.c  host_ip.h  host_p.h  hostcfg.c  hstsetup.c
core/inc/: CMakeLists.txt  actor.h  angles.h  animation.h  assoca_p.h  brconfig.h.in  brender.h  brerror.h  brfile.h  brfont.h  brlog.h  brmem.h  brvector.h  camera.h  colour.h  compiler.h  custsupt.h  fixed.h  fw_p.h  light.h  material.h  math_p.h  model.h  pixelmap.h  pm_p.h  pool.h  pretok.tok  quat.h  render.h  scalar.h  syscn_p.h  token.h  (+3 more)
dosio/: CMakeLists.txt  dosio.c
drivers/: CMakeLists.txt
examples/: CMakeLists.txt
tools/: CMakeLists.txt
(+1968 files in other folders)
